Fixed Flex Layout Issues

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,6 @@
 #app-layout{
+    width:100%;
     height:100%;
+    min-height: 100vh;
 }
 
