--- a/src/app/layout/footer/footer.component.css
+++ b/src/app/layout/footer/footer.component.css
@@ -10,3 +10,7 @@
 #logo:hover{
     cursor:pointer;
 }
+
+#footer{
+    height:100% !important;
+}
