--- a/src/styles.css
+++ b/src/styles.css
@@ -1,15 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-html{
-    height: 100vh;
-    min-height:100vh;
-}
 
 body{
-    position:absolute;
-    bottom:0;
-    top:0;
-    left:0;
-    right:0;
+    display: flex;
+    min-height: 100vh;
+    flex-direction: column;
     margin:0;
 }
 
@@ -17,5 +11,5 @@ router-outlet + * {
   flex: 1 1 auto ;
   display: flex ;
   flex-direction: column ;
-  align-content: center;
+  align-content: center space-around ;
 }
